objects/MaintenancePurchaseManagement__c.object
<CustomObject>
    <description>購買管理</description>
    <fields>
        <fullName>AcceptanceDate__c</fullName>
        <formula>DATEVALUE(AcceptanceDatetime__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>検収日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcceptanceDatetime__c</fullName>
        <label>検収日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AttachmentContractAmount__c</fullName>
        <formula>MaintenanceContractManagement__r.SubAmountAttach__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>アタッチメント契約金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BypassTriggerCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BypassTriggerCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CallCenterReceptionNumber__c</fullName>
        <label>コールセンター受付番号</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractAmount__c</fullName>
        <formula>MaintenanceContractManagement__r.NewOdrContractAmountt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContractName__c</fullName>
        <formula>MaintenanceContractManagement__r.NewOdrSalesAccount__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HeliumContractAmount__c</fullName>
        <formula>MaintenanceContractManagement__r.SubAmountHeliumRollup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ヘリウム契約金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HeliumFillingAfter__c</fullName>
        <label>ヘリウム充填後（％）</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HeliumFillingBefore__c</fullName>
        <label>ヘリウム充填前（％）</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HeliumFillingCompletionDate__c</fullName>
        <label>ヘリウム充填予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HeliumFillingImplementationDate__c</fullName>
        <label>ヘリウム充填実施日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HeliumFillingOperationCost__c</fullName>
        <label>ヘリウム充填作業費</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HeliumLoadingQtyAnnually__c</fullName>
        <label>ヘリウム年間充填量</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HeliumLoadingQtyPerSession__c</fullName>
        <label>ヘリウム１回充填量</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HeliumLoadingSessionsAnnually__c</fullName>
        <label>ヘリウム年間回数</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HeliumNextFillingDate__c</fullName>
        <label>ヘリウム充填次回予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HeliumPerSessionPrice__c</fullName>
        <label>ヘリウム充填１回分価格</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HeliumRealFillingQty__c</fullName>
        <label>ヘリウム実充填量</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HeliumRevisedPrice__c</fullName>
        <label>ヘリウム改定価格</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HeliumUnitPriceWithOperationCost__c</fullName>
        <label>ヘリウム作業費込の単価</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HeliumUnitPrice__c</fullName>
        <label>ヘリウム単価</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IsAcceptanceSettled__c</fullName>
        <label>検収済</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ItemModel__c</fullName>
        <formula>MaintenanceContractManagement__r.UnitBody__r.Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>機種</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KazeiHiKazei__c</fullName>
        <label>課税／非課税</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LinkageStatus__c</fullName>
        <label>連携ステータス</label>
        <picklist>
            <picklistValues>
                <fullName>未連携</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>連携済</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>連携不要</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MaintenanceContractManagement__c</fullName>
        <label>保守契約管理</label>
        <referenceTo>MaintenanceContractManagement__c</referenceTo>
        <relationshipLabel>保守契約管理</relationshipLabel>
        <relationshipName>MaintenancePurchaseManagement</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MaintenanceContractPeriodEnd__c</fullName>
        <formula>MaintenanceContractManagement__r.NewOdrMaintenanceEndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>保守契約期間(終了)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MaintenanceContractPeriodStart__c</fullName>
        <formula>MaintenanceContractManagement__r.NewOdrMaintenanceStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>保守契約期間(開始)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MaintenanceContractPeriod__c</fullName>
        <formula>IF( NOT(ISNULL(MaintenanceContractPeriodStart__c)) || NOT(ISNULL(MaintenanceContractPeriodEnd__c)), (TEXT(MaintenanceContractPeriodStart__c) &amp; &apos; - &apos;  &amp; TEXT(MaintenanceContractPeriodEnd__c)),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>保守契約期間</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNRInspectionImplementationDate__c</fullName>
        <label>NSNR点検実施日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NSNRInspectionPlannedDate__c</fullName>
        <label>NSNR点検予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NSNRInspectionSessionsAnnually__c</fullName>
        <label>NSNR点検年間回数</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSRegularInspectionDate__c</fullName>
        <label>NS定期自主検査予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NSRegularInspectionImplementationDate__c</fullName>
        <label>NS定期自主検査実施日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderDate__c</fullName>
        <label>オーダ日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderMaintenanceType__c</fullName>
        <formula>IF( ISPICKVAL(MaintenanceContractManagement__r.NewOdrMaintenanceType__c, &apos;1&apos;), &apos;基本契約１&apos;,
IF( ISPICKVAL(MaintenanceContractManagement__r.NewOdrMaintenanceType__c, &apos;2&apos;), &apos;基本契約２&apos;,
IF( ISPICKVAL(MaintenanceContractManagement__r.NewOdrMaintenanceType__c, &apos;3&apos;), &apos;限定契約１&apos;,
IF( ISPICKVAL(MaintenanceContractManagement__r.NewOdrMaintenanceType__c, &apos;4&apos;), &apos;限定契約２&apos;,
IF( ISPICKVAL(MaintenanceContractManagement__r.NewOdrMaintenanceType__c, &apos;5&apos;), &apos;その他&apos;,
IF( ISPICKVAL(MaintenanceContractManagement__r.NewOdrMaintenanceType__c, &apos;6&apos;), &apos;He充填契約&apos;,
IF( ISPICKVAL(MaintenanceContractManagement__r.NewOdrMaintenanceType__c, &apos;99&apos;), &apos;未設定&apos;,
TEXT(MaintenanceContractManagement__r.NewOdrMaintenanceType__c)
)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>保守種類</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNETMaintenance__c</fullName>
        <formula>TEXT(MaintenanceContractManagement__r.NewOdrNetMaintenance__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NET保守区分</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalPurchaseCustomerOrder__c</fullName>
        <label>購買元取引先オーダ</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentType__c</fullName>
        <label>支払タイプ</label>
        <picklist>
            <picklistValues>
                <fullName>HELIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductNumber__c</fullName>
        <formula>MaintenanceContractManagement__r.ProductNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>製番</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurchaseOrderType__c</fullName>
        <defaultValue>&quot;F01&quot;</defaultValue>
        <label>購買オーダタイプ</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurchasingManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>購買担当</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MPM_PurchasingManager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PurchasingOffice__c</fullName>
        <label>購買オフィス</label>
        <picklist>
            <picklistValues>
                <fullName>PR033</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR034</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR035</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR036</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR037</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR038</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR039</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR041</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR042</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR043</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PJ049</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PurchasingOrder__c</fullName>
        <label>購買オーダ</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionName__c</fullName>
        <formula>MaintenanceContractManagement__r.NewOdrRegion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>地域</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemarkHelium__c</fullName>
        <label>ヘリウム備考</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RemarkNSNR__c</fullName>
        <label>NSNR備考</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>備考</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SalesOrderNumber__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; + MaintenanceContractManagement__r.NewOdrSalesOrder__c, MaintenanceContractManagement__r.NewOdrSalesOrder__r.Name, &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>販売オーダNo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentCustomerAccount__c</fullName>
        <formula>MaintenanceContractManagement__r.NewOdrShipmentAccount__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>出荷先取引先</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentDestinationCode__c</fullName>
        <formula>MaintenanceContractManagement__r.NewOdrShipmentAccount__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>出荷先コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierCustomerCode__c</fullName>
        <label>購買先取引先</label>
        <picklist>
            <picklistValues>
                <fullName>0294</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0330</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0347</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0461</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0471</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0579</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0593</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0596</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0599</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0764</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1256</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1408</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1793</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1794</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1885</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1902</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2385</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2391</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3207</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3209</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3256</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3261</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3262</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3264</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3266</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3267</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3268</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3273</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3295</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3315</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UnitBodyContractAmount__c</fullName>
        <formula>MaintenanceContractManagement__r.SubAmountHontaiInspec__c + MaintenanceContractManagement__r.SubAmountHontaiNoInspecRollup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>本体契約金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitBodyNumber__c</fullName>
        <formula>MaintenanceContractManagement__r.UnitBody__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>本体番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WarehousePlanningDate__c</fullName>
        <label>計画入庫日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WarehousePlanningMonth__c</fullName>
        <formula>LPAD(TEXT(YEAR(WarehousePlanningDate__c)), 4, &apos;0&apos;) + LPAD(TEXT(MONTH(WarehousePlanningDate__c)), 2, &apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WarehousePlanningMonth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XPayment__c</fullName>
        <label>支払金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <label>保守購買管理</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MaintenanceContractManagement__c</columns>
        <columns>NAME</columns>
        <columns>LinkageStatus__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>PurchasingOrder__c</columns>
        <columns>AcceptanceDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>ERP_SUMI</fullName>
        <columns>MaintenanceContractManagement__c</columns>
        <columns>NAME</columns>
        <columns>LinkageStatus__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>PurchasingOrder__c</columns>
        <columns>AcceptanceDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LinkageStatus__c</field>
            <operation>equals</operation>
            <value>連携済</value>
        </filters>
        <label>連携済</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>View_Creater</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Remark__c</columns>
        <columns>ContractName__c</columns>
        <columns>SupplierCustomerCode__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>HeliumPerSessionPrice__c</columns>
        <columns>HeliumFillingCompletionDate__c</columns>
        <columns>HeliumNextFillingDate__c</columns>
        <columns>NSNRInspectionPlannedDate__c</columns>
        <columns>NSRegularInspectionDate__c</columns>
        <columns>LinkageStatus__c</columns>
        <columns>UnitBodyNumber__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>髙橋</value>
        </filters>
        <filters>
            <field>UnitBodyNumber__c</field>
            <operation>equals</operation>
            <value>NM1027000770077</value>
        </filters>
        <label>作成者別</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>保守購買管理名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>VR01_MaintPurch_OrderDateFuture</fullName>
        <active>true</active>
        <description>Forbid OrderDate__c in the future</description>
        <errorConditionFormula>OrderDate__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>OrderDate__c</errorDisplayField>
        <errorMessage>オーダ日付については未来日を設定することができません。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR02_MaintPurch_XPayment_Zero</fullName>
        <active>true</active>
        <description>Forbid the 0 value for XPayment__c</description>
        <errorConditionFormula>XPayment__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>XPayment__c</errorDisplayField>
        <errorMessage>支払金額は0円以外を設定してください。</errorMessage>
    </validationRules>
</CustomObject>